[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notion =  "0.5.1"
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
anyhow = "1.0.40"
toml = "0.5.8"
config = { version = "0.13.3", features = ["toml"] }
clap = { version = "4.0", features = ["derive"] }

[dependencies.chrono]
version = "0.4.23"
default-features = false
features = ["serde", "clock"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
cargo-husky = "1"
wiremock = "0.5.2"
skim = "0.10.2"
crossbeam-channel = "0.5"
